fix big screen white spaces

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -178,7 +178,7 @@ h3 {
   font-family: "Bellefair";
   font-style: normal;
   font-weight: normal;
-  font-size: 3.9vw;
+  font-size: 56px;
   line-height: 64px;
   text-transform: uppercase;
   color: #FFFFFF;
@@ -247,14 +247,11 @@ h5 {
 }
 
 /* LAYOUTS */
-.mainBody {
+.main {
+  padding-top: calc(96px + 40px);
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
-}
-
-.main {
-  padding-top: calc(96px + 40px);
 }
 
 .homeBody {
@@ -313,13 +310,12 @@ header {
   background: #ffffff;
   mix-blend-mode: normal;
   opacity: 0.25;
-  margin: 0 -30px 0 64px;
-  width: 473px;
+  margin: 0 -3% 0 4%;
   z-index: 1;
 }
 
 nav {
-  width: 830px;
+  width: 60%;
   height: 96px;
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: blur(81px);
@@ -527,15 +523,15 @@ nav ul li a:hover::after, nav ul li .router-link-active.router-link-exact-active
 }
 
 .tech .dot {
-  width: 5.56vw;
-  height: 5.56vw;
-  line-height: 5.56vw;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
   text-align: center;
   border: 1px solid rgba(255, 255, 255, 0.25);
   font-family: "Bellefair";
   font-style: normal;
   font-weight: normal;
-  font-size: 2.4vw;
+  font-size: 34px;
 }
 
 .tech li:not(:first-child) {
@@ -569,11 +565,6 @@ nav ul li a:hover::after, nav ul li .router-link-active.router-link-exact-active
   bottom: 0;
 }
 
-#crew-bio, #tech-description {
-  font-size: 1.25vw;
-  line-height: 2.342vw;
-}
-
 .tech-element {
   display: flex;
   padding-top: 9.52vw;
@@ -587,17 +578,21 @@ nav ul li a:hover::after, nav ul li .router-link-active.router-link-exact-active
   width: 32.64vw;
 }
 
+#tech-title {
+  width: 41.07vw;
+}
+
 .tech-img {
   position: absolute;
-  width: 35.76%;
   top: 30%;
   right: 0;
 }
 
-.tech-img img {
-  width: 100%;
+@media screen and (max-width: 1300px) {
+  .tech-img img {
+    width: 400px;
+  }
 }
-
 @media screen and (max-width: 1200px) {
   nav ul li span {
     display: none;
@@ -780,6 +775,10 @@ nav ul li a:hover::after, nav ul li .router-link-active.router-link-exact-active
 
   .nav-controls {
     justify-content: center;
+  }
+
+  #tech-title {
+    width: auto;
   }
 
   #tech-description {
