--- a/src/sass/preset.scss
+++ b/src/sass/preset.scss
@@ -118,7 +118,7 @@ h3 {
     font-family: 'Bellefair';
     font-style: normal;
     font-weight: normal;
-    font-size: 3.9vw;
+    font-size: 56px;
     line-height: 64px;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -180,13 +180,11 @@ h5 {
     color: #0B0D17;
 }
 /* LAYOUTS */
-.mainBody {
+.main {
+    padding-top: calc(96px + 40px);
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-}
-.main {
-    padding-top: calc(96px + 40px);
 }
 .homeBody {
     background: url('../images/home/background-home-desktop.jpg') no-repeat center fixed;
@@ -236,12 +234,11 @@ header {
     background: #ffffff;
     mix-blend-mode: normal;
     opacity: 0.25;
-    margin: 0 -30px 0 64px;
-    width: 473px;
+    margin: 0 -3% 0 4%;
     z-index: 1;
 }
 nav {
-    width: 830px;
+    width: 60%;
     height: 96px;
     background: rgba(255, 255, 255, 0.04);
     backdrop-filter: blur(81px);
